<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">TryGank</string>
    <string name="loading_more">正在加载</string>
    <string name="menu_search">查找</string>
    <string name="menu_notifications">通知</string>
    <string name="menu_settings">设置</string>
    <string name="menu_about_us">关于</string>
    <string name="home_page">首页</string>
    <string name="item_01">Item 1</string>
    <string name="item_02">Item 2</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="user_nickname">Gypsophila</string>

    <string name="top">头条</string>
    <string name="nba">NBA</string>
    <string name="cars">汽车</string>
    <string name="jokes">笑话</string>
    <string name="load_data_failed">加载数据失败</string>
    <string name="nav_netease_news">网易新闻</string>
    <!--gank-->
    <string name="gank_android">Android</string>
    <string name="gank_ios">iOS</string>
    <string name="gank_welfare">福利</string>
    <string name="gank_front_end">前端</string>
    <string name="gank_video">休息视频</string>
    <string name="gank_app">App</string>
    <string name="gank_extra">拓展资源</string>
    <string name="gank_via">via %1$s</string>
    <string name="empty_tip">暂无数据</string>
    <string name="share_send_to">分享至</string>
    <string name="user_nick">Gypsophila</string>
    <string name="author_github">https://github.com/AstroGypsophila</string>

    <!--menu-->
    <string name="menu_favorite">收藏</string>
    <string name="menu_share">分享</string>
    <string name="menu_save">保存</string>

    <!--main nav menu-->
    <string name="nav_menu_gank">Gank</string>
    <string name="nav_menu_today">今日力推</string>
    <string name="nav_menu_favorite">我的收藏</string>
    <string name="nav_menu_palette">主题切换</string>
    <string name="nav_menu_feedback">反馈</string>

    <!--Search-->
    <string name="search_et_hint">搜索gank内容</string>

    <!--UserInfo-->
    <string name="change_user_avatar">更换头像</string>
    <string name="take_photo">照相</string>
    <string name="choose_from_gallery">从相册选择</string>

    <string name="quit_toast">再按一次返回键退出应用</string>



</resources>